--- a/BenefitGraph/View/Base.lproj/Main.storyboard
+++ b/BenefitGraph/View/Base.lproj/Main.storyboard
@@ -113,7 +113,6 @@
                                 <state key="normal" title="Edit"/>
                                 <connections>
                                     <action selector="addAction:" destination="K8W-zm-eww" eventType="touchUpInside" id="IKX-kM-zWZ"/>
-                                    <action selector="detailAction:" destination="K8W-zm-eww" eventType="touchUpInside" id="e1U-0G-ywh"/>
                                     <action selector="editAction:" destination="rzz-lB-gtF" eventType="touchUpInside" id="zls-rX-fac"/>
                                 </connections>
                             </button>
@@ -207,14 +206,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Initial" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vEl-SF-khd">
-                                <rect key="frame" x="101" y="177" width="213" height="63"/>
+                                <rect key="frame" x="101" y="28" width="213" height="63"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ku5-Pc-cLS">
-                                <rect key="frame" x="142" y="405" width="130" height="86"/>
+                                <rect key="frame" x="142" y="77" width="130" height="86"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
                                 <state key="normal" title="Add"/>
@@ -222,21 +221,18 @@
                                     <action selector="addAction:" destination="K8W-zm-eww" eventType="touchUpInside" id="7CQ-OW-xK4"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5PX-ao-3Bu">
-                                <rect key="frame" x="142" y="499" width="130" height="86"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="d2A-ZB-3sr">
+                                <rect key="frame" x="0.0" y="239" width="414" height="574"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
-                                <state key="normal" title="Detail"/>
-                                <connections>
-                                    <action selector="detailAction:" destination="K8W-zm-eww" eventType="touchUpInside" id="Q4v-iG-AG4"/>
-                                </connections>
-                            </button>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="OXe-b1-xKv"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="記録" image="doc" catalog="system" id="aMX-5g-7ws"/>
                     <connections>
+                        <outlet property="tableView" destination="d2A-ZB-3sr" id="Cg3-kX-mVd"/>
                         <segue destination="l0z-9w-uXf" kind="show" identifier="add" id="mQw-cO-9O4"/>
                         <segue destination="rzz-lB-gtF" kind="show" identifier="detail" id="ZZF-sI-JCI"/>
                     </connections>
@@ -266,7 +262,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="ZZU-ho-bLV"/>
+        <segue reference="mQw-cO-9O4"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="chart.bar" catalog="system" width="128" height="90"/>
