--- a/BenefitGraph/View/Base.lproj/Main.storyboard
+++ b/BenefitGraph/View/Base.lproj/Main.storyboard
@@ -177,7 +177,7 @@
                                 <rect key="frame" x="89" y="358" width="199" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="円" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YW5-vJ-9kA">
                                 <rect key="frame" x="296" y="358" width="42" height="34"/>
