--- a/BenefitGraph/View/CustomViewCell1.xib
+++ b/BenefitGraph/View/CustomViewCell1.xib
@@ -21,31 +21,25 @@
                         <rect key="frame" x="5" y="5" width="310" height="254"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ff2-iE-OMk">
-                                <rect key="frame" x="134" y="0.0" width="42" height="21"/>
+                                <rect key="frame" x="134" y="0.0" width="42" height="39"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="39" id="sQH-hE-2mK"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0KJ-fw-Zkg">
-                                <rect key="frame" x="0.0" y="42" width="310" height="212"/>
+                                <rect key="frame" x="0.0" y="47" width="310" height="207"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="記録がありません" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="STt-si-bU4">
-                                <rect key="frame" x="85.5" y="21" width="139" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="STt-si-bU4" firstAttribute="top" secondItem="Ff2-iE-OMk" secondAttribute="bottom" id="17l-lp-zmC"/>
                             <constraint firstItem="Ff2-iE-OMk" firstAttribute="centerX" secondItem="Aba-q9-dBk" secondAttribute="centerX" id="24x-SG-5cl"/>
                             <constraint firstItem="0KJ-fw-Zkg" firstAttribute="leading" secondItem="Aba-q9-dBk" secondAttribute="leading" id="5Uq-ay-l17"/>
-                            <constraint firstItem="STt-si-bU4" firstAttribute="centerX" secondItem="Aba-q9-dBk" secondAttribute="centerX" id="Rt4-2K-v8R"/>
                             <constraint firstAttribute="width" constant="310" id="TkZ-9v-IbX"/>
                             <constraint firstAttribute="bottom" secondItem="0KJ-fw-Zkg" secondAttribute="bottom" id="WHf-k0-KbW"/>
-                            <constraint firstItem="0KJ-fw-Zkg" firstAttribute="top" secondItem="STt-si-bU4" secondAttribute="bottom" id="WOm-4O-SKd"/>
-                            <constraint firstItem="STt-si-bU4" firstAttribute="top" secondItem="Ff2-iE-OMk" secondAttribute="bottom" id="XTe-Id-fX5"/>
+                            <constraint firstItem="0KJ-fw-Zkg" firstAttribute="top" secondItem="Ff2-iE-OMk" secondAttribute="bottom" constant="8" id="WIZ-Kc-QKu"/>
                             <constraint firstAttribute="height" constant="254" id="hFs-zz-K8l"/>
                             <constraint firstAttribute="trailing" secondItem="0KJ-fw-Zkg" secondAttribute="trailing" id="pNB-Pf-4Th"/>
                             <constraint firstItem="Ff2-iE-OMk" firstAttribute="top" secondItem="Aba-q9-dBk" secondAttribute="top" id="qJe-Vp-XMh"/>
@@ -63,10 +57,9 @@
             <connections>
                 <outlet property="cellContainer" destination="Aba-q9-dBk" id="qb6-XD-dfk"/>
                 <outlet property="cellLabel" destination="Ff2-iE-OMk" id="9Gi-X6-coy"/>
-                <outlet property="noDataLabel" destination="STt-si-bU4" id="1X4-b9-4y4"/>
                 <outlet property="tableView" destination="0KJ-fw-Zkg" id="Pd7-7F-vJe"/>
             </connections>
-            <point key="canvasLocation" x="-139" y="141"/>
+            <point key="canvasLocation" x="-139.13043478260872" y="140.625"/>
         </tableViewCell>
     </objects>
     <resources>
