--- a/BenefitGraph/View/CustomViewCell3.xib
+++ b/BenefitGraph/View/CustomViewCell3.xib
@@ -66,6 +66,7 @@
             <connections>
                 <outlet property="categoryLabel" destination="ybd-hg-Nu8" id="RKn-Xf-p2t"/>
                 <outlet property="cellContainer" destination="Qpi-kA-2FJ" id="YLa-lE-k5Q"/>
+                <outlet property="editButton" destination="qDr-48-p3e" id="mYz-Sy-S43"/>
                 <outlet property="moneyLabel" destination="9LG-YY-YWh" id="Wd4-ds-BU6"/>
             </connections>
             <point key="canvasLocation" x="105.79710144927537" y="96.09375"/>
