--- a/BenefitGraph/View/CustomViewCell1.xib
+++ b/BenefitGraph/View/CustomViewCell1.xib
@@ -10,15 +10,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomCell1" rowHeight="264" id="KGk-i7-Jjw" customClass="CustomViewCell1" customModule="BenefitGraph" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="264"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomCell1" rowHeight="289" id="KGk-i7-Jjw" customClass="CustomViewCell1" customModule="BenefitGraph" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="289"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="264"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="289"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Aba-q9-dBk">
-                        <rect key="frame" x="5" y="5" width="310" height="254"/>
+                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Aba-q9-dBk">
+                        <rect key="frame" x="5" y="5" width="310" height="210"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ff2-iE-OMk">
                                 <rect key="frame" x="134" y="0.0" width="42" height="39"/>
@@ -30,8 +30,11 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0KJ-fw-Zkg">
-                                <rect key="frame" x="0.0" y="47" width="310" height="207"/>
+                                <rect key="frame" x="0.0" y="47" width="310" height="200"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="PTt-WF-gbk"/>
+                                </constraints>
                             </tableView>
                         </subviews>
                         <constraints>
@@ -40,7 +43,6 @@
                             <constraint firstAttribute="width" constant="310" id="TkZ-9v-IbX"/>
                             <constraint firstAttribute="bottom" secondItem="0KJ-fw-Zkg" secondAttribute="bottom" id="WHf-k0-KbW"/>
                             <constraint firstItem="0KJ-fw-Zkg" firstAttribute="top" secondItem="Ff2-iE-OMk" secondAttribute="bottom" constant="8" id="WIZ-Kc-QKu"/>
-                            <constraint firstAttribute="height" constant="254" id="hFs-zz-K8l"/>
                             <constraint firstAttribute="trailing" secondItem="0KJ-fw-Zkg" secondAttribute="trailing" id="pNB-Pf-4Th"/>
                             <constraint firstItem="Ff2-iE-OMk" firstAttribute="top" secondItem="Aba-q9-dBk" secondAttribute="top" id="qJe-Vp-XMh"/>
                         </constraints>
@@ -58,8 +60,9 @@
                 <outlet property="cellContainer" destination="Aba-q9-dBk" id="qb6-XD-dfk"/>
                 <outlet property="cellLabel" destination="Ff2-iE-OMk" id="9Gi-X6-coy"/>
                 <outlet property="tableView" destination="0KJ-fw-Zkg" id="Pd7-7F-vJe"/>
+                <outlet property="tableViewHeight" destination="PTt-WF-gbk" id="f8C-bb-l45"/>
             </connections>
-            <point key="canvasLocation" x="-139.13043478260872" y="140.625"/>
+            <point key="canvasLocation" x="-139.13043478260872" y="148.99553571428569"/>
         </tableViewCell>
     </objects>
     <resources>
